--- a/test.glade
+++ b/test.glade
@@ -9,10 +9,12 @@
   <object class="GtkPopover" id="popover1">
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkLabel">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
+      <object class="GtkButton">
         <property name="label" translatable="yes">eat a dick</property>
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="receives_default">True</property>
+        <signal name="clicked" handler="shutdown" swapped="no"/>
       </object>
     </child>
   </object>
@@ -117,6 +119,7 @@
                   <object class="GtkGrid">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="column_spacing">4</property>
                     <child>
                       <object class="GtkEntry" id="calc">
                         <property name="visible">True</property>
@@ -143,7 +146,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <property name="margin_right">4</property>
+                        <property name="margin_right">5</property>
                         <property name="margin_top">4</property>
                         <property name="margin_bottom">4</property>
                         <signal name="clicked" handler="calculate" swapped="no"/>
@@ -423,7 +426,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="margin_left">4</property>
-                <property name="margin_right">4</property>
                 <property name="margin_top">4</property>
                 <property name="margin_bottom">4</property>
                 <property name="orientation">vertical</property>
