--- a/test.glade
+++ b/test.glade
@@ -90,7 +90,7 @@
                   <object class="GtkImage">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="stock">gtk-apply</property>
+                    <property name="icon_name">open-menu-symbolic</property>
                   </object>
                 </child>
               </object>
@@ -391,10 +391,6 @@
                       <object class="GtkEventBox">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="margin_left">2</property>
-                        <property name="margin_right">2</property>
-                        <property name="margin_top">2</property>
-                        <property name="margin_bottom">2</property>
                         <signal name="button-press-event" handler="star10" swapped="no"/>
                         <signal name="enter-notify-event" handler="enter10" swapped="no"/>
                         <signal name="leave-notify-event" handler="leave" swapped="no"/>
