--- a/test.glade
+++ b/test.glade
@@ -443,10 +443,12 @@
             </child>
             <child>
               <object class="GtkImage" id="image">
+                <property name="width_request">86</property>
+                <property name="height_request">86</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="vexpand">True</property>
-                <property name="stock">gtk-cancel</property>
+                <property name="icon_name">image-x-generic</property>
               </object>
               <packing>
                 <property name="left_attach">2</property>
